grading/xnTBi9qAPLbX467aY3/results/errors.txt
null
Creating Temporary Folder
Copying StudentFiles Contents
Creating container
Writing Differences
Writing Log Files
Moving Files to Completed

AutoGrader.java:125: error: cannot find symbol
			studentAnswer[i] = SkeletonForStudents.tempConvert(modes[i], temps[i]);
			                   ^
  symbol:   variable SkeletonForStudents
  location: class AutoGrader
1 error
Error: Could not find or load main class AutoGrader
AutoGrader.java:125: error: cannot find symbol
			studentAnswer[i] = SkeletonForStudents.tempConvert(modes[i], temps[i]);
			                   ^
  symbol:   variable SkeletonForStudents
  location: class AutoGrader
1 error
Error: Could not find or load main class AutoGrader
